# Palestra_FHO

./: .gitignore  README.md
BTTracker/: settings.gradle
BTTracker-Press/app/: build.gradle
BTTracker-Press/app/src/main/: AndroidManifest.xml
BTTracker-Press/app/src/main/res/layout/: activity_find_device.xml  fragment_maps.xml
BTTracker-Press/app/src/main/res/menu/: menu_main.xml
BTTracker-Press/app/src/main/res/values/: strings.xml
BTTracker-Press/gradle/wrapper/: gradle-wrapper.properties
BTTracker/app/: build.gradle
BTTracker/app/src/main/: AndroidManifest.xml
BTTracker/app/src/main/res/layout/: activity_main.xml  fragment_maps.xml
BTTracker/app/src/main/res/navigation/: nav_graph.xml
BTTracker/app/src/main/res/values/: themes.xml
BTTracker/app/src/main/res/values-night/: themes.xml
BTTracker/app/src/main/res/values-v23/: themes.xml
NRF24L01_Terminal/: pom.xml
NRF24L01_Terminal/src/com/gustavo/main/: Main.java
NRF24L01_Terminal/src/com/gustavo/nrf24l01/: NRF24ATController.java  NRF24GuiUpdater.java
NRF24L01_Terminal/src/com/gustavo/view/: MainView.java
map_console/: README.md  pubspec.yaml
map_console/lib/: main.dart
map_console/macos/Runner.xcodeproj/: project.pbxproj
map_console/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
map_console/macos/Runner/Configs/: AppInfo.xcconfig
map_console/test/: widget_test.dart
nrf_bt_pico/: CMakeLists.txt  LOCATION_GATT.gatt  gatt_service.cpp  gatt_service.h  main.cpp
nrf_bt_pico/nrf24/: CMakeLists.txt  RF24.cpp  RF24_config.h
pico_mqtt_python/: pico_mqtt.py
(+10 files in other folders)
